--- a/demo/Base.lproj/Main.storyboard
+++ b/demo/Base.lproj/Main.storyboard
@@ -126,22 +126,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rvw-fd-URd">
-                                <rect key="frame" x="134" y="211" width="107" height="30"/>
+                                <rect key="frame" x="134" y="206" width="107" height="30"/>
                                 <state key="normal" title="WiFiコンフィグ"/>
                                 <connections>
                                     <action selector="wifiConfigButtonPressed:" destination="ddT-nb-DYf" eventType="touchUpInside" id="mI5-Pr-tPf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7qI-zz-zxW">
-                                <rect key="frame" x="141" y="257" width="92" height="30"/>
+                                <rect key="frame" x="141" y="252" width="92" height="30"/>
                                 <state key="normal" title="体重情報取得"/>
                                 <connections>
                                     <action selector="readDataButtonPressed:" destination="ddT-nb-DYf" eventType="touchUpInside" id="ZRQ-t4-VYY"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rH-mA-uCr">
-                                <rect key="frame" x="166" y="94" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="171" y="127" width="33" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -152,15 +152,6 @@
                                     <action selector="secretModeButtonPressed:" destination="ddT-nb-DYf" eventType="touchUpInside" id="9dw-9v-KUD"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAG-nO-S28">
-                                <rect key="frame" x="141" y="510" width="92" height="30"/>
-                                <state key="normal" title="アンバインド">
-                                    <color key="titleColor" red="1" green="0.023286350454939653" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="unbindButtonPressed:" destination="ddT-nb-DYf" eventType="touchUpInside" id="JbI-qt-C7D"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="igH-MH-tLx">
                                 <rect key="frame" x="126" y="394" width="123" height="30"/>
                                 <state key="normal" title="秘密モードとは？"/>
@@ -168,19 +159,36 @@
                                     <action selector="secretModeInfoButtonPressed:" destination="ddT-nb-DYf" eventType="touchUpInside" id="ygB-KR-FwP"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAG-nO-S28">
+                                <rect key="frame" x="141" y="505" width="92" height="30"/>
+                                <state key="normal" title="アンバインド">
+                                    <color key="titleColor" red="1" green="0.023286350454939653" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="unbindButtonPressed:" destination="ddT-nb-DYf" eventType="touchUpInside" id="JbI-qt-C7D"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current User:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ev-ii-TpC">
+                                <rect key="frame" x="135" y="98" width="104" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="7qI-zz-zxW" firstAttribute="leading" secondItem="fAG-nO-S28" secondAttribute="leading" id="9LL-j1-En1"/>
-                            <constraint firstItem="2rH-mA-uCr" firstAttribute="top" secondItem="ETO-89-fMt" secondAttribute="bottom" constant="30" id="9XR-Ji-i3g"/>
+                            <constraint firstItem="2rH-mA-uCr" firstAttribute="top" secondItem="ETO-89-fMt" secondAttribute="bottom" constant="63" id="9XR-Ji-i3g"/>
                             <constraint firstItem="fAG-nO-S28" firstAttribute="top" secondItem="7qI-zz-zxW" secondAttribute="bottom" constant="223" id="AqH-rX-C7V"/>
                             <constraint firstItem="2rH-mA-uCr" firstAttribute="centerX" secondItem="wBC-6a-Cte" secondAttribute="centerX" id="IaC-wb-O51"/>
+                            <constraint firstItem="0ev-ii-TpC" firstAttribute="centerX" secondItem="2rH-mA-uCr" secondAttribute="centerX" id="OQb-X7-IiP"/>
                             <constraint firstItem="igH-MH-tLx" firstAttribute="top" secondItem="MIO-Ng-c9g" secondAttribute="bottom" constant="8" id="WMS-mv-nx1"/>
                             <constraint firstItem="igH-MH-tLx" firstAttribute="centerX" secondItem="fAG-nO-S28" secondAttribute="centerX" id="Y2b-Gq-5rg"/>
                             <constraint firstItem="2rH-mA-uCr" firstAttribute="centerX" secondItem="rvw-fd-URd" secondAttribute="centerX" id="a0y-zV-aIy"/>
-                            <constraint firstItem="rvw-fd-URd" firstAttribute="top" secondItem="2rH-mA-uCr" secondAttribute="bottom" constant="96" id="axd-7G-aCa"/>
+                            <constraint firstItem="rvw-fd-URd" firstAttribute="top" secondItem="2rH-mA-uCr" secondAttribute="bottom" constant="63" id="axd-7G-aCa"/>
                             <constraint firstItem="7qI-zz-zxW" firstAttribute="top" secondItem="rvw-fd-URd" secondAttribute="bottom" constant="16" id="eo8-40-2rW"/>
                             <constraint firstItem="rvw-fd-URd" firstAttribute="leading" secondItem="7qI-zz-zxW" secondAttribute="leading" constant="-7" id="iRK-TD-NVV"/>
+                            <constraint firstItem="2rH-mA-uCr" firstAttribute="top" secondItem="0ev-ii-TpC" secondAttribute="bottom" constant="8" symbolic="YES" id="nr2-QH-wRg"/>
                             <constraint firstItem="igH-MH-tLx" firstAttribute="centerX" secondItem="MIO-Ng-c9g" secondAttribute="centerX" id="qjB-DV-gJ3"/>
                             <constraint firstItem="aTP-3K-sz7" firstAttribute="top" secondItem="igH-MH-tLx" secondAttribute="bottom" constant="243" id="tec-lL-E9I"/>
                         </constraints>
